java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ImportClassTest/testImportHint194018a-hints.pass
Change to import java.util.Map.Entry
